--- a/_sass/pages/_portfolio.scss
+++ b/_sass/pages/_portfolio.scss
@@ -34,11 +34,6 @@ $projectBorderWidth: 4px;
     width: 2 * $numRadius;
   }
 
-/*  > li:nth-child(2n) {
-    background-color: $footerBgColor;
-    color: #fff;
-  }
-*/
   .resume-item-data {
     clear: both;
   }
@@ -47,65 +42,63 @@ $projectBorderWidth: 4px;
     background: #202020;
     clear: both;
     margin: 18px -18px 0;
+    overflow: hidden;
     padding: 18px;
-    width: 924px;overflow:hidden;
 
-    a {
+    li {
       display: block;
       float: left;
-      height: 284px;
-      overflow: hidden;
-      position: relative;
-      width: 453px;
+      margin: 0;
+      padding: 0;
+      width: 49%;
 
-      &:first-child {
-        margin-right: 18px;
+      &:nth-child(2n+1) {
+        margin-right: 2%;
       }
 
-      &:after {
-        border: $projectBorderWidth solid rgba(#000, .4);
+      a {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 547px;
+        overflow: hidden;
+        position: relative;
+      }
+
+      $projectBorderWidth: 5px;
+
+      a:after {
+        @include box-shadow(inset 0 0 0 $projectBorderWidth rgba(#000, .4));
         content: "";
         display: block;
-        height: 276px;
+        height: 100%;
         left: 0;
         position: absolute;
         top: 0;
-        width: 445px;
+        width: 100%;
       }
-    }
 
-    img {
-      display: block;
+      img {
+        display: block;
+        max-width: 100%;
+      }
     }
   }
 
   .technologies {
     list-style-type: disc;
   }
+}
 
-  .project-thumbnail {
+@media screen and (max-width: 500px) {
 
-    display: block;
-    float: right;
-    height: 170px;
-    margin-left: 2em;
-    overflow: hidden;
-    position: relative;
-    width: 284px;
+  #projects .screenshot li {
+    float: none;
+    margin-right: 0;
+    width: 100%;
 
-    &:after {
-      border: $projectBorderWidth solid rgba(#000, .4);
-      content: "";
-      display: block;
-      height: 170px - 2 * $projectBorderWidth;
-      left: 0;
-      position: absolute;
-      top: 0;
-      width: 284px - 2 * $projectBorderWidth;
-    }
-
-    img {
-      @include scale(0.5);
+    &:not(:last-child) {
+      margin-bottom: $commonPadding;
     }
   }
 }
